new mobile background color

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
         background-color: cornflowerblue;
       }
 
-      .pricing-container{
+      .pricing-container {
         display: flex;
         justify-content: center;
         height: 100vh;
         align-items: center;
         gap: 3rem;
-
       }
 
-
-      .pricing-plan{
+      .pricing-plan {
         flex: 1;
         max-width: 400px;
         padding: 20px;
@@ -36,11 +34,10 @@
       }
 
       .pricing-plan div {
-
         margin-bottom: 50px;
       }
 
-      .plan-title{
+      .plan-title {
         font-size: 24px;
         font-weight: bold;
         margin-bottom: 10px;
@@ -48,23 +45,23 @@
         border-radius: 5px;
       }
 
-      .plan-price{
+      .plan-price {
         font-size: 48px;
         font-weight: bold;
         margin-bottom: 15px;
       }
 
-      .plan-features{
+      .plan-features {
         list-style: none;
         padding: 0;
         margin: 0;
       }
 
-      .plan-features li{
+      .plan-features li {
         margin-bottom: 10px;
       }
 
-      .plan-button{
+      .plan-button {
         cursor: pointer;
         padding: 10px;
         border: none;
@@ -74,17 +71,15 @@
         margin-top: 10px;
       }
 
-
-
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
-        .pricing-container{
+        .pricing-container {
           flex-direction: column;
           height: 100%;
         }
 
-        body{
-          background-color: indianred;
+        body {
+          background-color: red;
         }
       }
     </style>
