--- a/index.html
+++ b/index.html
@@ -3,84 +3,18 @@
   <head>
     <title>Flexbox Pricing Table</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&amp;display=swap"
       rel="stylesheet"
     />
     <style>
       body {
         font-family: "Sono", sans-serif;
-        background-color: cornflowerblue;
-      }
-
-      .pricing-container {
-        display: flex;
-        justify-content: center;
-        height: 100vh;
-        align-items: center;
-        gap: 3rem;
-      }
-
-      .pricing-plan {
-        flex: 1;
-        max-width: 400px;
-        padding: 20px;
-        background-color: #f2f2f2;
-        border-radius: 20px;
-        text-align: center;
-        height: 400px;
-        align-content: center;
-      }
-
-      .pricing-plan div {
-        margin-bottom: 50px;
-      }
-
-      .plan-title {
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 10px;
-        background-color: #ff6600;
-        border-radius: 5px;
-      }
-
-      .plan-price {
-        font-size: 48px;
-        font-weight: bold;
-        margin-bottom: 15px;
-      }
-
-      .plan-features {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      .plan-features li {
-        margin-bottom: 10px;
-      }
-
-      .plan-button {
-        cursor: pointer;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        background-color: #ff6600;
-        color: white;
-        margin-top: 10px;
       }
 
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
-        .pricing-container {
-          flex-direction: column;
-          height: 100%;
-        }
-
-        body {
-          background-color: red;
-        }
       }
     </style>
   </head>
