--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         font-family: "Sono", sans-serif;
       }
 
+      .pricing-table {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
       }
