--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       .plan-button {
         padding: 10px;
-        background-color: red;
+        background-color: indianred;
         color: white;
         border-radius: 5px;
         border: none;
